# Coursework_racing_simulator

./: CMakeLists.txt  README.md  RacingSimulator.cpp  RacingSimulator.h  main.cpp
Transport/: Racers.cpp  Racers.h  Transport.cpp  Transport.h
