cmake_minimum_required(VERSION 3.10)
project(Coursework)
set (SOURCES_EXE RacingSimulator.cpp main.cpp) 
set (HEADERS_EXE RacingSimulator.h)
set (SOURCES_LIB Transport/Transport.cpp Transport/Racers.cpp) 
set (HEADERS_LIB Transport/Transport.h Transport/Racers.h)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
add_library(CourseworkLib SHARED ${SOURCES_LIB} ${HEADERS_LIB})
add_executable(CourseworkExe ${SOURCES_EXE} ${HEADERS_EXE})
target_link_libraries(CourseworkExe CourseworkLib)